@@ -193,6 +193,7 @@ Major new features in this release
 All:
 
 - Added (experimental) IPv6 support to wxSocket (Arcen)
+- Add support for wxExecute(wxEXEC_ASYNC) in wxBase (Lukasz Michalski)
 - Added wxXLocale class and xlocale-like functions using it
 - Allow loading message catalogs from wxFileSystem (Axel Gembe)
 - Added wxMessageQueue class for inter-thread communications
